force-app/main/default/objects/Event_Organizer__c/Event_Organizer__c.object-meta.xml
<CustomObject>
    <description>This Object include records about Organizers</description>
    <label>Event Organizer</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>