force-app/main/default/objects/Event_Organizer__c/fields/Address_Book__c.field-meta.xml
<CustomField>
    <fullName>Address_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address Book</label>
    <referenceTo>Address_Book__c</referenceTo>
    <relationshipLabel>Events Organizers</relationshipLabel>
    <relationshipName>Events_Organizers</relationshipName>
    <type>Lookup</type>
</CustomField>