force-app/main/default/objects/Event_Organizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <description>This field contains Alternative Phone of Event Organizer</description>
    <inlineHelpText>Provide Alternative Phone of Event Organizer</inlineHelpText>
    <label>Alternative Phone</label>
    <type>Phone</type>
</CustomField>