force-app/main/default/objects/Event_Organizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This Field contains the phone number of Event Organizer</description>
    <inlineHelpText>Provide the phone number of Event Organizer</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>